--- a/index1.html
+++ b/index1.html
@@ -50,7 +50,7 @@ ver en telegram
 
 
 <header>
-  <img src="C:\Users\USER\Desktop\pagina\Captura de pantalla 2025-10-02 110037.png" " alt= ¨class="logo">
+  <img src="C:\Users\USER\Desktop\pagina\Captura de pantalla 2025-10-02 110037.png"/>
 </header>
   
 
